# flake-templates

./: LICENSE  README.md  flake.nix
.github/workflows/: update-flake.yml
templates/latex/: flake.nix  main.tex
templates/latex/nix/: font-genshingothic.nix  font-monaspice.nix  font-source-han-serif-jp.nix
templates/ocaml/: .envrc  README.md  flake.nix  it-is-test.opam
templates/ocaml/.github/workflows/: ci.yml  release.yml  update-flake-lock.yml
templates/ocaml/nix/: ocamlformat.nix
